objects/LLC_BI__Deposit__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__E_Disclosures_And_Statement_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users select this optional boolean field to indicate they give consent to receive electronic disclosures regarding periodic account statements. By default, it is false.</description>
        <inlineHelpText>Select this checkbox to give consent to receive electronic disclosures regarding periodic account statements.</inlineHelpText>
        <label>E Disclosures And Statement Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Electronic_Notice_Delivery_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users select this optional boolean field to indicate the Electronic Procedure Disclosure should include disclosures for the electronic delivery of documents and notices. This content also automatically populates in the disclosure if the same content was previously included in the associated Terms and Conditions policy. By default, the field is false.</description>
        <inlineHelpText>Select this checkbox if the Electronic Procedure Disclosure should include disclosures for electronic documents and notices. This content also automatically populates in the disclosure if previously included in the associated Terms and Conditions policy.</inlineHelpText>
        <label>Electronic Notice Delivery Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Employee_Deposit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users manually populate this optional checkbox field to specify when a deposit belongs to an employee of the financial institution. By default, it is false.</description>
        <inlineHelpText>This field specifies when a deposit belongs to an employee of the financial institution.</inlineHelpText>
        <label>Employee Deposit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Enable_Portal_Documents__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically populates this optional boolean field to indicate that the deposit translation needs portal-enabled documents.</description>
        <inlineHelpText>The system automatically populates this checkbox when the deposit translation needs portal-enabled documents.</inlineHelpText>
        <label>Enable Portal Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Exclude_Transaction_Account_Disclosure__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users select this optional boolean field if the account type or account holder is excluded from coverage under the Minnesota Transaction Account Application Disclosure requirement. This is only applicable to users in Minnesota. By default, it is false.</description>
        <inlineHelpText>Select this field if the account type or account holder is excluded from coverage under the Minnesota Transaction Account Application Disclosure requirement. This is only applicable to users in Minnesota.</inlineHelpText>
        <label>Exclude Transaction Account Disclosure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Financial_Institution_Authorized_Signer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Financial Institution Authorized Signer</description>
        <inlineHelpText>Select the authorized signer for your financial institution.</inlineHelpText>
        <label>Financial Institution Authorized Signer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Five_Year_Period_Ends_Year__c</fullName>
        <description>TThis field is optional and can be collected as part of a workflow. It is the year in which the five year period ends.</description>
        <inlineHelpText>The year in which the five year period will end.</inlineHelpText>
        <label>Five Year Period Ends Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Frequency_of_Distributions__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies the frequency of the periodic distributions.</description>
        <inlineHelpText>Specifies the frequency of the periodic distributions.</inlineHelpText>
        <label>Frequency of Distributions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Funding_Amount__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the funding amount for a deposit product.</description>
        <label>Funding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Funding_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and can be collected as part of a workflow. It is the funding method for a deposit.</description>
        <label>Funding Method</label>
        <referenceTo>LLC_BI__Funding_Method__c</referenceTo>
        <relationshipLabel>Deposits</relationshipLabel>
        <relationshipName>Deposits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__IRA_Is_Self_Directed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and can be collected as part of a workflow. If true, the IRA is self-directed.</description>
        <inlineHelpText>If true the IRA is self-directed.</inlineHelpText>
        <label>IRA is Self-Directed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__IRA_Plan_Type__c</fullName>
        <description>Users populate this optional picklist field with the type of tax-favored account (TFA) they want to open. By default, it is blank.</description>
        <inlineHelpText>Select the tax-favored account (TFA) type.</inlineHelpText>
        <label>TFA Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Traditional IRA</fullName>
                </value>
                <value>
                    <fullName>Roth IRA</fullName>
                </value>
                <value>
                    <fullName>Health Savings Account</fullName>
                </value>
                <value>
                    <fullName>Coverdell Education Savings Account</fullName>
                </value>
                <value>
                    <fullName>SIMPLE IRA</fullName>
                </value>
                <value>
                    <fullName>Traditional Beneficiary IRA</fullName>
                </value>
                <value>
                    <fullName>Roth Beneficiary IRA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__IRA_Recharacterization_Initial_Cont_Amt__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the initial contribution amount of the assets being recharacterized.</description>
        <inlineHelpText>The initial contribution amount of the assets being recharacterized.</inlineHelpText>
        <label>IRA Recharacterization Initial Cont Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__IRA_Recharacterization_Initial_Cont_Date__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the initial contribution date of the assets being recharacterized.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The initial contribution date of the assets being recharacterized.</inlineHelpText>
        <label>IRA Recharacterization Initial Cont Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__IRA_Recharacterization_Type__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies the type of recharacterization.</description>
        <inlineHelpText>Specifies the type of recharacterization.</inlineHelpText>
        <label>IRA Recharacterization Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Traditional to Roth</fullName>
                </value>
                <value>
                    <fullName>Roth to Traditional</fullName>
                </value>
                <value>
                    <fullName>Roth conversion back to Traditional or SIMPLE</fullName>
                </value>
                <value>
                    <fullName>Erroneous rollover or transfer from Traditional to SIMPLE and back to Traditional</fullName>
                </value>
                <value>
                    <fullName>Roth rollover or direct rollover from an ERP to Traditional</fullName>
                </value>
                <value>
                    <fullName>Roth beneficiary direct rollover from an ERP to traditional beneficiary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Index_Name__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. This item indicates the name of the index tied to the variable rate account.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This item indicates the name of the index tied to the variable rate account.</inlineHelpText>
        <label>Index Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Inherited_IRA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Inherited IRA</description>
        <inlineHelpText>This indicates whether the plan is an inherited IRA. An IRA is inherited when the original owner of the IRA dies and ownership of the IRA passes to the named beneficiary of the original IRA.</inlineHelpText>
        <label>Inherited IRA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Initial_Deposit__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. This currency field is used to specify the amount of the initial deposit.</description>
        <label>Initial Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Initial_Interest_Rate_Type__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies what kind of rate is used to determine the initial rate of interest on the account.</description>
        <inlineHelpText>Specifies what kind of rate is used to determine the initial rate of interest on the account.</inlineHelpText>
        <label>Initial Interest Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Initial_Interest_Rate__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the initial interest rate on the account.</description>
        <inlineHelpText>The initial interest rate on the account.</inlineHelpText>
        <label>Initial Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Initial_Rate_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and can be collected as part of a workflow. If true, an initial rate (for example, a teaser rate) was applied to the account.</description>
        <inlineHelpText>If true an initial rate (i.e. a teaser rate) was applied to the account.</inlineHelpText>
        <label>Initial Rate Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Initial_Rate_Margin__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the percentage that is added to the index rate to determine the initial (teaser) rate.</description>
        <inlineHelpText>The percentage that is added to the index rate to determine the initial (teaser) rate.</inlineHelpText>
        <label>Initial Rate Margin</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Initial_Rate_Period_Number__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the number of periods that the initial rate is in effect.</description>
        <inlineHelpText>The number of periods that the initial rate will be in effect.</inlineHelpText>
        <label>Initial Rate Period Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Initial_Rate_Period_Type__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies the period of time the initial rate applies.</description>
        <inlineHelpText>Specifies the period of time the initial rate will apply.</inlineHelpText>
        <label>Initial Rate Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day(s)</fullName>
                </value>
                <value>
                    <fullName>Month(s)</fullName>
                </value>
                <value>
                    <fullName>Week(s)</fullName>
                </value>
                <value>
                    <fullName>Year(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Payment_Method_Type__c</fullName>
        <description>This picklist field is populated during the deposit account opening process. The picklist values are the methods of payment (to the account owner) of the earned interest or dividends on an interest bearing or dividend earning certificate account. The frequency of payment is separately indicated. When applicable, the account number to be credited and the ABA number of the receiving financial institution is required.</description>
        <label>Interest Payment Method Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add to Principal</fullName>
                </value>
                <value>
                    <fullName>Receive Periodic Check</fullName>
                </value>
                <value>
                    <fullName>Credit Account</fullName>
                </value>
                <value>
                    <fullName>Credit Account at other financial institution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Rate_Margin_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and can be collected as part of a workflow. If true, a margin is used in determining the interest rate for a variable rate account.</description>
        <inlineHelpText>If true a margin is used in determining the interest rate for a variable rate account.</inlineHelpText>
        <label>Interest Rate Margin Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Rate_Margin_Percent__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. This percentage is added to the index to determine the applicable rate for the account.</description>
        <inlineHelpText>This percentage that is added to the index to determine the applicable rate for the account.</inlineHelpText>
        <label>Interest Rate Margin Percent</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Rate_Type__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies the type of interest rate on the account.</description>
        <inlineHelpText>Specifies the type of interest rate on the account.</inlineHelpText>
        <label>Interest Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Rate__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the interest rate of the deposit account. If an initial rate (for example, a teaser) applies, then this is the rate that is in effect after the expiration of the teaser period.</description>
        <inlineHelpText>The interest rate of the deposit account. If an initial rate (i.e. a teaser) applies this is the rate that is in effect after the expiration of the teaser period.</inlineHelpText>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Withdrawal_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and can be collected as part of a workflow. If true, accrued earnings are required to be distributed out of the account.</description>
        <inlineHelpText>If true accrued earnings are required to be distributed out of the account.</inlineHelpText>
        <label>Interest Withdrawal Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Booked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system selects this checkbox to indicate that the Deposit is booked. By default, this checkbox is deselected.</description>
        <inlineHelpText>When selected, this checkbox indicates that the Deposit is booked.</inlineHelpText>
        <label>Is Booked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Superseded_By__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. This field identifies the CD that supersedes this CD.</description>
        <formula>IF(ISPICKVAL(LLC_BI__Status__c, &quot;Superseded&quot;),  LLC_BI__Related_Deposit__r.Name , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Superseded By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Under_Maintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically populates this checkbox to indicate if a current deposit record undergoes maintenance.</description>
        <inlineHelpText>Select this checkbox to indicate that a current deposit is under maintenance.</inlineHelpText>
        <label>Is Under Maintenance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Lease_Type_Other__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It describes the other type of safe deposit box lease.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Describes the other type of safe deposit box lease.</inlineHelpText>
        <label>Lease Type Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Life_Expectancy_Factor__c</fullName>
        <description>This field is optional.  It can be collected as part of a workflow. It is the life expectancy factor as reflected in the appropriate IRS table.</description>
        <inlineHelpText>The life expectancy factor as reflected in the appropriate IRS table.</inlineHelpText>
        <label>Life Expectancy Factor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Mailing_Address__c</fullName>
        <description>Street address used for a deposit product. This field is optional and can be populated during the Deposit Origination workflow.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Street address used for a deposit product. This field is optional and can be populated during the Deposit Origination workflow.</inlineHelpText>
        <label>Mailing Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Mailing_City__c</fullName>
        <description>City for address used for a deposit product. This field is optional and can be populated during the Deposit Origination workflow.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>City for address used for a deposit product. This field is optional and can be populated during the Deposit Origination workflow.</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Mailing_State__c</fullName>
        <description>State for address used for a deposit product. This field is optional and can be populated during the Deposit Origination workflow.</description>
        <inlineHelpText>State for address used for a deposit product. This field is optional and can be populated during the Deposit Origination workflow.</inlineHelpText>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Mailing_Zip_Code__c</fullName>
        <description>Zip Code for address used for a deposit product. This field is optional and can be populated during the Deposit Origination workflow.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Zip Code for address used for a deposit product. This field is optional and can be populated during the Deposit Origination workflow.</inlineHelpText>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maturity_Date__c</fullName>
        <description>TThis field is optional and can be collected as part of a workflow. This date field is used to specify the date at which the deposit matures.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maximum_Balance_Tiered_Account__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It represents the amount of the maximum tier balance that may be in the account in order to earn the disclosed rate for that tier. This is the high-end dollar amount for a given tier.</description>
        <inlineHelpText>The amount of the maximum tier balance that may be in the account in order to earn the disclosed rate for that tier. This is the high end dollar amount for a given tier.</inlineHelpText>
        <label>Maximum Balance Tiered Account</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maximum_Rate_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and can be collected as part of a workflow. If true, a rate ceiling applies on the account.</description>
        <inlineHelpText>If true a rate ceiling applies on the account.</inlineHelpText>
        <label>Maximum Rate Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maximum_Rate__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the highest interest rate that can apply to the account.</description>
        <inlineHelpText>The highest interest rate that can apply to the account.</inlineHelpText>
        <label>Maximum Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Minimum_Balance_Tiered_Account__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. The amount of the minimum tier balance that must be in the account in order to earn the disclosed rate for that tier. This is the low-end dollar amount for a given tier.</description>
        <inlineHelpText>The amount of the minimum tier balance that must be in the account in order to earn the disclosed rate for that tier. This is the low end dollar amount for a given tier.</inlineHelpText>
        <label>Minimum Balance Tiered Account</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Minimum_Rate_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and can be collected as part of a workflow. If true, a rate floor applies to the account.</description>
        <inlineHelpText>If true a rate floor applies to the account.</inlineHelpText>
        <label>Minimum Rate Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Minimum_Rate__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is the lowest interest rate that can apply to the account.</description>
        <inlineHelpText>The lowest interest rate that can apply to the account.</inlineHelpText>
        <label>Minimum Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Negotiated_Compounding_Frequency__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies how often accrued earnings are added to the principal balance of an account for the purpose of computing additional earnings, interest, or dividends.</description>
        <inlineHelpText>Specifies how often accrued earnings are added to the principal balance of an account for the purpose of computing additional earnings/interest/dividends.  Should only be passed if negotiation has occurred at account opening.</inlineHelpText>
        <label>Negotiated Compounding Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Every Other Week</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semiannually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Continuous</fullName>
                </value>
                <value>
                    <fullName>No compounding/Simple</fullName>
                </value>
                <value>
                    <fullName>Semimonthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Notes__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It is a free form text field used to add notes or details to the deposit record.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Notice_Account_Maturity_Type__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It specifies the alternate maturity of an account, if any. This only applies to notice accounts.</description>
        <inlineHelpText>Specifies the alternate maturity of an account if any. This only applies to notice accounts.</inlineHelpText>
        <label>Notice Account Maturity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Period</fullName>
                </value>
                <value>
                    <fullName>No Alternate Maturity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Number_of_Agents_Required__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It indicates the number of agents required to be present before any action can be made regarding the safe deposit box account.</description>
        <inlineHelpText>The number of agents required to be present before any action can be made regarding the safe deposit box account.</inlineHelpText>
        <label>Number of Agents Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Number_of_Lessees_Required__c</fullName>
        <description>This field is optional and can be collected as part of a workflow. It indicates the number of lessees (holders) required to be present in order to gain access to the safe deposit box.</description>
        <inlineHelpText>The number of lessees (holders) required to be present in order to gain access to the safe deposit box.</inlineHelpText>
        <label>Number of Lessees Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>